# img2poster

./: .gitignore  .markdownlint.jsonc  Cargo.toml  README.md
src/: image_to_poster.rs  main.rs  poster.rs
