[package]
name = "img2poster"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[features]
cargo = ["clap/cargo"]
serde = ["serde/derive"]

[dependencies]
clap = { version = "4.2.4", features = ["cargo"] }
image = "0.24.6"
exoquant = "0.2.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_bytes = "0.11.9"
rand = "0.8.5"