[package]
name = "img2poster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[features]
cargo = ["clap/cargo"]
serde = ["serde/derive"]

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
image = "0.24.6"
exoquant = "0.2.0"
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.104"
serde_bytes = "0.11.12"
rand = "0.8.5"